<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_programs">

    <fragment
        android:id="@+id/nav_programs"
        android:name="com.example.cdummy.ui.Programs.Programs"
        android:label="@string/menu_programs"
        tools:layout="@layout/programs_fragment" />

    <fragment
        android:id="@+id/nav_compiler"
        android:name="com.example.cdummy.ui.Compiler.Compiler"
        android:label="@string/menu_compiler"
        tools:layout="@layout/compiler_fragment" />

    <fragment
        android:id="@+id/nav_rate"
        android:name="com.example.cdummy.ui.Rate.Rate"
        android:label="@string/menu_rate"
        tools:layout="@layout/rate_fragment" />

</navigation>